--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,15 +1,36 @@
 .card {
-	display: flex;
-	flex-direction: row;
-	height: 68px;
+	display: block;
+	border: 1px solid #1Eb980;
+	border-radius: 3px;
+	padding: 1em;
+	margin: 0.5em 0;
+}
+
+.card-container {
+	height: 64px;
 	max-width: 40em;
 	justify-content: space-between;
 }
 
-.card-img {
+.card-info {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.card-name, .card-frame, .card-img {
 	display: inline-block;
+	vertical-align: middle;
+}
+
+.card-img {
 	max-width: 64px;
 	max-height: 64px;
+	border:1px solid whitesmoke;
+	border-radius: 32px;
+	background-color:whitesmoke;
 }
 
 .contain {
@@ -18,13 +39,9 @@
 	object-fit: contain;
 }
 
-.card-name {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.card-frame {
-
+.card-name, .card-frame {
+	font-size: 20px;
+	color: whitesmoke;
 }
 
 .opt-btn {
@@ -35,6 +52,6 @@
 	display: none;
 }
 
-.card-opt-panel .is-open {
+.is-open {
 	display: block;
 }
