--- a/src/components/styles/card-list.css
+++ b/src/components/styles/card-list.css
@@ -5,7 +5,7 @@
 	list-style: none;
 	padding: 0.5em;
 	border-radius: 3px;
-	background-color: #045D64;
+	background-color: rgb(6, 59, 63);
 	max-width: 40em;
 	overflow: hidden;
 	overflow-y: scroll;
