--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,15 +1,15 @@
 .card {
 	display: block;
-	border: 1px solid #1Eb980;
+	border: 2px solid #1Eb980;
+	background-color: #045D64;
 	border-radius: 3px;
 	padding: 1em;
 	margin: 0.5em 0;
 }
 
 .card-container {
-	height: 64px;
 	max-width: 40em;
-	justify-content: space-between;
+	transition: 0.5s ease all;
 }
 
 .card-info {
@@ -45,13 +45,34 @@
 }
 
 .opt-btn {
-
+	border: none;
+	background: transparent;
+	color: whitesmoke;
+	font-size: 50px;
 }
 
 .card-opt-panel {
+	margin-top: 0.5em;
 	display: none;
 }
 
-.is-open {
+.card-opt-panel.is-open {
 	display: block;
+}
+
+.card-opt-panel-body {
+	background-color: rgb(8, 67, 71);
+	border-radius: 3px;
+}
+
+.card-opt {
+	color: whitesmoke;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding: 1em 0;
+	margin: 0 auto;
+	height: 3em;
 }
