--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -56,6 +56,21 @@
     animation: fadein 0.5s;
 }
 
+.profile-form-wrapper label {
+    color: #8e909a;
+    padding-left: 2.5%;
+}
+
+.profile-form-wrapper input {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background-color: #32364a;
+    color: #FFFFFF;
+    line-height: 35px;
+    border: 2px inset #3b3c41;
+    padding-left: 2.5%;
+}
+
 .profile-save-btn-wrapper {
     text-align: right;
 }
