--- a/src/components/styles/card-list.css
+++ b/src/components/styles/card-list.css
@@ -3,7 +3,7 @@
 	text-align: center;
 	margin: 0 auto;
 	list-style: none;
-	padding: 1.5% 2.5% 1.5% 2.5%;
+	/*padding: 1.5% 2.5% 1.5% 2.5%;*/
 	border-radius: 3px;
 	/*background-color: rgb(6, 59, 63);*/
 	max-width: 40em;
