--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
 	text-align: center;
 	margin: 0 auto;
-	background-color: #32364a;
+	background-color: #232633;
 	padding: 5%;
 }
 
@@ -9,12 +9,12 @@
 
 	margin: 0;
 	padding: 1.5% 2.5% 1.5% 2.5%;
-	text-align: left;
+	text-align: center;
 	font-size: 20px;
 }
 
 .dashboard-section {
-	background-color: #2b2d3d;
+	/*background-color: #2b2d3d;*/
 }
 
 .dashboard-header,
@@ -24,7 +24,7 @@
 }
 
 .dashboard-section-header {
-	display: flex;
+	/*display: flex;*/
 	border-bottom: 2px solid #b94343;
 	margin-bottom: 2.5%;
 	padding: 1.5% 2.5% 1.5% 2.5%;
