--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -63,8 +63,8 @@
     flex: 0 0 90%;
     /*width: 83.33333%;*/
     text-transform: uppercase;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    /* margin-top: 5%;
+    margin-bottom: 5%; */
     font-size: 20px;
 }
 
