--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 398px) {
   .footer-style {
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: space-between;
     right: 0px;
@@ -8,8 +8,8 @@
     bottom: 0px;
     height: 50px;
     width: 100%;
-    padding: 0px;
-    margin: 0px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     color: #edeef0;
     background-color: #232633;
     border-top: 1px solid #35df5c;
@@ -53,7 +53,7 @@
 
 @media only screen and (min-width: 398px) {
   .footer-style {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
