--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -7,9 +7,9 @@
     left: 0px;
     bottom: 0px;
     height: 50px;
-    width: 100%;
+    width: 90%;
     padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
+    margin: 0 auto;
     color: #edeef0;
     background-color: #232633;
     border-top: 1px solid #35df5c;
@@ -61,9 +61,9 @@
     left: 0px;
     bottom: 0px;
     height: 75px;
-    width: 100%;
+    width: 90%;
     padding: 0px;
-    margin: 0px;
+    margin: 0 auto;
     color: #edeef0;
     background-color: #232633;
     border-top: 1px solid #35df5c;
