Style create-shift-form

--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -68,6 +68,12 @@
 	padding: 0;
 }
 
+.opt-btn:hover,
+.opt-btn:focus {
+	text-shadow: 0 0 1px #8aff37,
+	0 0 10px rgba(64, 199, 57, 0.8);
+}
+
 .card-opt-panel {
 	margin-top: 0.5em;
 	display: none;
