--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -32,7 +32,8 @@
     font-size: 11px;
 }
 
-.form-field input {
+.form-field input,
+.form-field select {
     display: block;
     width: 100%;
     margin-top: 5px;
