--- a/src/components/modals/styles/modal.css
+++ b/src/components/modals/styles/modal.css
@@ -8,9 +8,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 10;
-    background-color: black;
-	opacity: 0.65;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 /* provides the positioning context for the actual modal content */
@@ -20,9 +18,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 10000;
     overflow: auto;
     text-align: center;
-    padding: 4px;
+    padding: 5%;
     cursor: pointer;
 }
