--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -109,6 +109,29 @@
     transition-duration: .2s;
 }
 
+.form-reset-btn {
+    background: transparent;
+    padding: 2px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-bottom: 2px solid #35cbdf;
+    color: #35cbdf;
+    text-transform: uppercase;
+	font-size: 12px;
+	transition-property: background,color;
+    transition-duration: .2s;
+    letter-spacing: 1px;
+}
+
+.form-reset-btn:hover,
+.form-reset-btn:focus {
+    color: black;
+    background: #35cbdf;
+    cursor: pointer;
+    transition-property: background,color;
+    transition-duration: .2s;
+}
+
 .form-btns {
     display: flex;
     align-items: center;
