--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -27,6 +27,8 @@
 }
 
 .form-field label {
+	display: block;
+	text-align: left;
     text-transform: uppercase;
     margin-top: 3rem;
     margin-bottom: 1.5rem;
