--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,8 @@
 
 .modal-close-btn {
   position: absolute;
-  padding: 5%;
+  margin: 10px;
+  padding: 20px;
   width: 20px;
   height: 20px;
   transition: transform .25s ease-in-out;
