--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -12,7 +12,6 @@
 .form-wrapper {
     margin: 0 auto;
     padding: 20px;
-    /*max-width: 360px;*/
     background-color: #232633;
     animation: fadein 0.8s;
 }
@@ -78,11 +77,6 @@
     font-size: 12px;
 }
 
-.form-modal-error {
-    color: #ce3d3d;
-    font-size: 12px;
-}
-
 .error-border {
     border: 1px solid #ce3d3d !important;
 }
@@ -111,8 +105,8 @@
 
 .form-reset-btn {
     background: transparent;
-    padding: 2px 10px;
-    margin-bottom: 10px;
+    padding: 0;
+    /*margin-bottom: 10px;*/
     border: none;
     border-bottom: 2px solid #35cbdf;
     color: #35cbdf;
@@ -135,6 +129,7 @@
 .form-btns {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 /* PROFILE FORM */
