--- a/src/components/modals/styles/modal.css
+++ b/src/components/modals/styles/modal.css
@@ -19,10 +19,19 @@
     bottom: 0;
     left: 0;
     overflow: auto;
-    text-align: center;
-    padding: 5%;
+    padding: 10% 5% 10% 5%;
     cursor: pointer;
-    text-align: left;
+}
+
+.modal-form-wrapper {
+    margin: 0 auto;
+    max-width: 360px;
+}
+
+.form-modal-error {
+    color: #ce3d3d;
+    font-size: 14px;
+    text-align: center;
 }
 
 /* React Modal Transitions */
