--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -28,3 +28,30 @@
 	margin-bottom: 2.5%;
 	padding: 1.5% 2.5% 1.5% 2.5%;
 }
+
+.advanFilter-btn {
+	border-radius: 50px;
+  background: transparent;
+  padding: 5px 10px;
+  border: 1px solid #35df5c;
+  color: #35df5c;
+  text-transform: uppercase;
+  font-size: 12px;
+  -webkit-transition-property: background,color;
+  -o-transition-property: background,color;
+  transition-property: background,color;
+  -webkit-transition-duration: .2s;
+  -o-transition-duration: .2s;
+  transition-duration: .2s;
+  letter-spacing: 1px;
+}
+
+.advanFilter-btn:hover,
+.advanFilter-btn:hover,
+.advanFilter-btn:focus,
+.advanFilter-btn:focus {
+    text-shadow: 0 0 1px #8aff37,
+                 0 0 10px rgba(64, 199, 57, 0.8);
+    /*-webkit-transform: scale(1.2);*/
+    /*transform: scale(1.2);*/
+}
