--- a/src/components/styles/filter.css
+++ b/src/components/styles/filter.css
@@ -1,11 +1,38 @@
-.filter {
+/* .filter {
   color: #edeef0;
   background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
-  background-color: #35df5c;
+  background-color: #006618ad;
   height: 29px;
-  overflow: hidden;
   width: 240px;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  overflow: hidden;
   border-radius: 5px;
+} */
+
+.filter {
+  background: transparent;
+  padding: 0px 60px;
+  border: 2px solid #35df5c;
+  color: #35df5c;
+  text-transform: uppercase;
+  font-size: 12px;
+  height: 29px;
+  width: 240px;
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  overflow: hidden;
+  border-radius: 5px;
+  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+  -webkit-transition-property: background,color;
+  -o-transition-property: background,color;
+  transition-property: background,color;
+  -webkit-transition-duration: .2s;
+  -o-transition-duration: .2s;
+  transition-duration: .2s;
+  letter-spacing: 1px;
 }
 
 .filter select {
@@ -14,8 +41,8 @@
   appearance: none;
   background: transparent;
   border: none;
-  font-size: 14px;
-  height: 29px;
-  padding: 5px;
-  width: 268px;
+  font-size: 12px;
+  height: 25px;
+  width: 165px;
+  color: #35df5c;
 }
