--- a/src/components/styles/filter.css
+++ b/src/components/styles/filter.css
@@ -1,18 +1,18 @@
 .filter {
   background: transparent;
-  padding: 0px 60px;
-  border: 2px solid #35df5c;
+  padding: 0px;
+  border: 1px solid #35df5c;
   color: #35df5c;
   text-transform: uppercase;
   font-size: 12px;
   height: 29px;
-  width: 240px;
+  width: 180px;
   margin: 0 auto;
   margin-top: 5px;
   margin-bottom: 5px;
   overflow: hidden;
   border-radius: 5px;
-  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+  /* background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0; */
   -webkit-transition-property: background,color;
   -o-transition-property: background,color;
   transition-property: background,color;
@@ -23,9 +23,9 @@
 }
 
 .filter select {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
+  appearance: none; */
   background: transparent;
   border: none;
   font-size: 12px;
