--- a/src/components/styles/navBar.css
+++ b/src/components/styles/navBar.css
@@ -3,11 +3,12 @@
     color: #edeef0;
     display: flex;
     height: auto;
-    padding: 2.5% 2.5% 0 2.5%;
+    padding: 2.5% 2.5% 0;
 }
 
 .navbar-header nav,
 .navbar-header div {
+    text-align: left;
     width: 50%;
     /*padding-left: 1.5%;*/
     /*padding-right: 1.5%;*/
@@ -27,18 +28,18 @@ nav a,
     font-size: 18px;
 }
 
-
 .navbar-links {
+    width: 100%;
     display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     height: 100%;
 }
 
 .navbar-links li {
-    padding: 1.5% 5% 1.5% 5%;
+    padding: 2.5%;
     align-self: center;
 }
 
