--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -166,3 +166,29 @@
     color: white;
 }
 
+/* SUPER FILTER */
+
+.filter-form-submit-btn {
+    display: block;
+    width: 210px;
+    margin: 0 auto;
+	border-radius: 50px;
+    background: transparent;
+    padding: 10px 50px;
+    border: 2px solid #35df5c;
+    color: #35df5c;
+    text-transform: uppercase;
+	font-size: 12px;
+	transition-property: background,color;
+    transition-duration: .2s;
+    letter-spacing: 1px;
+}
+
+.filter-form-submit-btn:hover,
+.filter-form-submit-btn:focus {
+    color: black;
+    background: #35df5c;
+    cursor: pointer;
+    transition-property: background,color;
+    transition-duration: .2s;
+}
