Add loading icon, rough draft

--- a/src/components/styles/landing-page.css
+++ b/src/components/styles/landing-page.css
@@ -1,6 +1,7 @@
 .landing-page {
 	/*background-color: #232633;*/
 	margin: 0 auto;
+	background-color: #FFFFFF;
 	/*text-align: center;*/
 	/*color: #edeef0;*/
 }
