--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -29,7 +29,8 @@
 }
 
 .super-filter-btn {
-	border-radius: 50px;
+  width: 100px;
+	border-radius: 5px;
   background: transparent;
   padding: 5px 10px;
   margin-top: 5px;
