--- a/src/components/styles/navBar.css
+++ b/src/components/styles/navBar.css
@@ -1,41 +1,34 @@
 .main-header {
     display: flex;
     justify-content: center;
-    /*background-color: #000509;*/
     background-color: #0b0e19;
     color: #edeef0;
     height: auto;
     width: 100%;
-    padding-top: 1.5%;
-    padding-bottom: 1.5%;
-
 }
 
 .main-header-logo-wrapper {
     display: flex;
-    /*flex: 0 0 20%;*/
     align-items: center;
     padding-left: 20px;
 }
+
+.main-header-logo-wrapper:hover,
+.main-header-logo-wrapper:focus {
+    color: #03A9F4;
+    text-shadow: 0 0 1px #03A9F4,
+                 0 0 10px rgb(3, 169, 244, 0.8)
+}
+
 .main-header-logo-wrapper h1 {
-    /*display: inline-block;*/
     margin: 0;
     padding-left: 20px;
     font-size: calc(1.2rem + .9vw);
     font-style: italic;
-
 }
 
 .main-header-navbar {
     flex: 0 0 80%;
-}
-
-.main-header nav,
-.main-header div {
-    /*text-align: left;*/
-    /*width: 50%;*/
-    /*padding-left: 1.5%;*/
-    /*padding-right: 1.5%;*/
 }
 
 .main-header div a {
@@ -91,7 +84,6 @@ nav a.active {
 .navbar-signout-btn {
     border: none;
     background: transparent;
-    /*padding: 1.5% 0 1.5% 5%;*/
     padding: 0;
 
 }
